two mockup versions of homepage

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,3 +1,7 @@
+@import "partials/baserules";
 @import "partials/usersdeleteform";
+@import "partials/slick";
 
 @import "pages/manageusers";
+@import "pages/login";
+@import "pages/homefront";
