--- a/resources/assets/sass/front/pages/_homepage.scss
+++ b/resources/assets/sass/front/pages/_homepage.scss
@@ -14,9 +14,19 @@
     font-family: $lead_italic;
     text-align: center;
     padding: 1em;
+    animation: dropIn 0.5s;
+    animation-delay: 1s;
+    animation-fill-mode: forwards;
+    opacity: 0;
+    position: relative;
+    top: -300px;
+    left: 0;
   }
 }
 
+@keyframes dropIn {
+  to {top: 0; opacity: 1;}
+}
 .intro {
   max-width: 700px;
   margin: 0 auto;
@@ -24,4 +34,24 @@
   color: $primary_blue;
   font-size: 150%;
   text-align: center;
+}
+
+.service-box, .course-box {
+  padding: 0 2em 2em 2em;
+  margin-top: 2em;
+}
+
+.service-box:nth-child(2), .course-box:nth-child(2) {
+  border-left: 1px solid $grey_text;
+  border-right: 1px solid $grey_text;
+}
+
+.client-box {
+  padding: 50px;
+  background: $grey_text;
+  height: 150px;
+
+  &:hover {
+    background: $secondary_orange;
+  }
 }
