--- a/resources/assets/sass/front/partials/_searchbar.scss
+++ b/resources/assets/sass/front/partials/_searchbar.scss
@@ -1,5 +1,32 @@
 .searchbar {
   width: 100%;
-  height: 40px;
+  height: 50px;
   padding: 8px 2em;
+
+  .search-form {
+    width: 300px;
+  }
+}
+
+.contact-scroller {
+  width: 60%;
+  float: left;
+  .scroller-item {
+    color: $secondary_orange;
+    opacity: 0;
+    font-size: 1.75em;
+    line-height: 34px;
+    position: absolute;
+    transition: 1s;
+  }
+
+  .scroller-item.current {
+    opacity: 1;
+    display: inline;
+    left: 20px;
+  }
+
+  .scroller-item:not(.current) {
+    left: 1000px;
+  }
 }
