setting up mailers, has event bug

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -11,6 +11,8 @@
 @import "front/partials/buttons";
 @import "front/partials/footer";
 @import "partials/forms";
+@import "partials/enquiry";
+@import "front/partials/workshops";
 
 @import "pages/manageusers";
 @import "pages/login";
