--- a/resources/assets/sass/front/partials/_workshops.scss
+++ b/resources/assets/sass/front/partials/_workshops.scss
@@ -8,6 +8,15 @@
 
   .workshop-detail {
     text-transform: capitalize;
+
+    &>.prompt-button {
+      margin: 0;
+      padding: 5px 10px;
+    }
+
+    &:not(:last-child) {
+      padding-top: 5px;
+    }
   }
 }
 
