--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -13,6 +13,7 @@
 @import "partials/forms";
 @import "partials/enquiry";
 @import "front/partials/workshops";
+@import "partials/page_banner";
 
 @import "pages/manageusers";
 @import "pages/login";
