--- a/resources/assets/sass/front/variables/_colours.scss
+++ b/resources/assets/sass/front/variables/_colours.scss
@@ -1,5 +1,6 @@
 $primary_blue: #1A2840;
 $secondary_blue: #2D456E;
+$washed_blue: #333B4D;
 $primary_orange: #F05A28;
 $secondary_orange: #EF7A54;
 $white: #FFFFFF;
