--- a/resources/assets/sass/partials/_page_banner.scss
+++ b/resources/assets/sass/partials/_page_banner.scss
@@ -2,6 +2,7 @@
   background: $washed_blue;
   padding: 50px 0;
   text-align: center;
+  margin-bottom: 50px;
 
   span {
     display: inline-block;
