--- a/resources/assets/sass/front/pages/_homepage.scss
+++ b/resources/assets/sass/front/pages/_homepage.scss
@@ -1,6 +1,6 @@
 .homepage-banner {
   width: 100%;
-  padding: 4em 0;
+  padding: 4em 0 2em;
   background: $primary_blue;
 
   img {
@@ -36,6 +36,7 @@
   color: $white;
   font-size: 150%;
   text-align: center;
+  padding-bottom: 2em;
 
   p {
     max-width: 700px;
