--- a/resources/assets/sass/pages/_workshops.scss
+++ b/resources/assets/sass/pages/_workshops.scss
@@ -1,7 +1,7 @@
 .workshop-list-table {
   width:100%;
   max-width: 900px;
-  margin: 0 auto;
+  margin: 3em auto;
   font-family: $body_text;
 
   .table-header {
