--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -18,6 +18,7 @@
 @import "pages/manageusers";
 @import "pages/login";
 @import "front/pages/homepage";
+@import "front/pages/twocolstructure";
 @import "front/pages/services";
 @import "front/pages/courses";
 @import "pages/workshops";
