--- a/resources/assets/sass/front/pages/_courses.scss
+++ b/resources/assets/sass/front/pages/_courses.scss
@@ -23,18 +23,36 @@
 }
 
 .course-icons-container {
-  text-align: center;
-
+  max-width: 800px;
+  margin: 0 auto;
+  .course-icon-row>div {
+    padding: 50px 1em;
+    position: relative;
+  }
   .course-icon-box {
-    width: 35%;
-    margin: 2em 4em;
-    min-height: 250px;
+    width: 100%;
+    width: 350px;
+    height: 350px;
     display: inline-block;
+    border: 1px solid $grey_text;
+    text-align: center;
+    padding-top: 50px;
+
+    &:hover {
+      border-color: $primary_orange;
+    }
+
+    svg {
+      max-width: 200px;
+      width: 100%;
+      max-height: 160px;
+    }
 
     h4 {
       font-family: $body_text;
       text-transform: uppercase;
       color: $primary_blue;
+      padding-top: 50px;
     }
 
     &:hover h4 {
@@ -54,4 +72,11 @@
       fill: $primary_orange;
     }
   }
+}
+
+p.courses-intro {
+  font-family: $body_text;
+  color: $grey_text;
+  max-width: 700px;
+  margin: 2em auto;
 }
