--- a/resources/assets/sass/front/variables/_colours.scss
+++ b/resources/assets/sass/front/variables/_colours.scss
@@ -4,6 +4,6 @@ $washed_blue: #333B4D;
 $primary_orange: #F05A28;
 $secondary_orange: #EF7A54;
 $white: #FFFFFF;
-$grey_text: #a7a7a7;
+$grey_text: #808080;
 $light_grey: #e5e5e5;
 $eggshell: #eeeeee;
