--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -14,6 +14,7 @@
 @import "partials/enquiry";
 @import "front/partials/workshops";
 @import "partials/page_banner";
+@import "front/partials/homecontactform";
 
 @import "pages/manageusers";
 @import "pages/login";
