--- a/resources/assets/sass/front/pages/_homepage.scss
+++ b/resources/assets/sass/front/pages/_homepage.scss
@@ -51,8 +51,8 @@
 }
 
 .service-box:nth-child(2), .course-box:nth-child(2) {
-  border-left: 1px solid $grey_text;
-  border-right: 1px solid $grey_text;
+  border-left: 1px solid $light_grey;
+  border-right: 1px solid $light_grey;
 }
 
 .client-box {
