--- a/resources/assets/sass/partials/_forms.scss
+++ b/resources/assets/sass/partials/_forms.scss
@@ -5,7 +5,7 @@
   }
 
   input[type=text], input[type=email], textarea, select {
-    border: 1px solid $primary_blue;
+    border: 1px solid $secondary_blue;
     border-radius: 0;
   }
 
