--- a/resources/assets/sass/front/pages/_courses.scss
+++ b/resources/assets/sass/front/pages/_courses.scss
@@ -19,6 +19,10 @@
   .course-info {
     color: $grey_text;
     font-weight: 300;
+
+    ul {
+      list-style-image: url(../../images/isomark_bullet.png);
+    }
   }
 }
 
