--- a/resources/assets/sass/pages/_manageusers.scss
+++ b/resources/assets/sass/pages/_manageusers.scss
@@ -3,7 +3,7 @@
   width: 300px;
   padding: 2em;
   min-height: 6em;
-  top: 85%;
+  top: 80vh;
   right: 0;
   background: orangered;
   color: white;
