--- a/resources/assets/sass/front/pages/_homepage.scss
+++ b/resources/assets/sass/front/pages/_homepage.scss
@@ -55,12 +55,32 @@
   border-right: 1px solid $light_grey;
 }
 
-.client-box {
-  padding: 50px;
-  background: $grey_text;
-  height: 150px;
+.client-logo-row {
+  margin-top: 40px;
+  margin-bottom: 50px;
+}
 
-  &:hover {
-    background: $secondary_orange;
+.client-box {
+  height: 150px;
+  padding: 0 40px;
+
+  svg {
+    max-height: 150px;
+    min-height: 150px;
+
+    &:not(:hover) path, &:not(:hover) rect, &:not(:hover) circle, &:not(:hover) polygon {
+      fill: $light_grey;
+      stroke: $light_grey;
+    }
+
+    &:not(:hover) .white {
+      fill: #ffffff;
+      stroke: #ffffff;
+    }
+
+    &:not(:hover) .white-fill {
+      fill: #ffffff;
+      stroke: $light_grey;
+    }
   }
 }
