--- a/resources/assets/sass/front/pages/_courses.scss
+++ b/resources/assets/sass/front/pages/_courses.scss
@@ -35,7 +35,7 @@
   }
   .course-icon-box {
     width: 100%;
-    width: 350px;
+    max-width: 350px;
     height: 350px;
     display: inline-block;
     border: 1px solid $grey_text;
