--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -18,6 +18,7 @@
 @import "front/partials/workshops";
 @import "partials/page_banner";
 @import "front/partials/homecontactform";
+@import "front/partials/slidemenu";
 
 @import "pages/manageusers";
 @import "pages/login";
