--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -27,6 +27,7 @@
 @import "front/pages/twocolstructure";
 @import "front/pages/services";
 @import "front/pages/courses";
+@import "front/pages/contact";
 @import "pages/workshops";
 @import "pages/contactdetails";
 @import "front/pages/bookingform";
