page banner background pattern

--- a/resources/assets/sass/partials/_page_banner.scss
+++ b/resources/assets/sass/partials/_page_banner.scss
@@ -1,5 +1,6 @@
 .page-title-banner {
-  background: $washed_blue;
+  background-color: $washed_blue;
+  background-image: url(../../images/isomark_website_bgpattern3.png);
   padding: 50px 0;
   text-align: center;
   margin-bottom: 50px;
