--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5451,7 +5451,7 @@ a, a:visited, a:active, a:hover {
     background-color: #1A2840; }
 
 #slides {
-  height: 600px;
+  max-height: 600px;
   width: 100%;
   margin: 0 auto;
   overflow: hidden; }
@@ -5464,8 +5464,9 @@ a, a:visited, a:active, a:hover {
 
 .carousel-slide {
   width: 100%;
-  height: 550px;
-  position: relative; }
+  max-height: 600px;
+  position: relative;
+  overflow: hidden; }
   @media only screen and (max-width: 360px) {
     .carousel-slide {
       height: auto;
@@ -5475,11 +5476,18 @@ a, a:visited, a:active, a:hover {
       height: auto;
       max-height: 320px; } }
   .carousel-slide img {
-    width: 100%; }
+    width: 100%;
+    display: block; }
+    @media only screen and (min-width: 901px) {
+      .carousel-slide img {
+        position: relative;
+        left: 0;
+        bottom: 150px; } }
   .carousel-slide .slide-text-holder {
     width: 100%;
-    height: 3em;
-    background-color: rgba(0, 0, 0, 0.6);
+    padding: 20px;
+    font-family: "Open Sans", Helvetica, Ariel, sans-serif;
+    background-color: rgba(26, 40, 64, 0.6);
     position: absolute;
     bottom: 0;
     z-index: 10; }
@@ -5490,6 +5498,11 @@ a, a:visited, a:active, a:hover {
       font-size: 2em;
       color: white;
       text-transform: uppercase; }
+    .carousel-slide .slide-text-holder .subtext {
+      font-size: 1em;
+      text-transform: uppercase;
+      padding-right: 6em;
+      color: #F05A28; }
 
 .section-container {
   text-align: center;
