--- a/resources/assets/sass/mixins/_media.scss
+++ b/resources/assets/sass/mixins/_media.scss
@@ -11,7 +11,10 @@
     @media only screen and (min-width: 606px) and (max-width: 900px) {@content;}
   }
   @else if $media == desktop {
-    @media only screen and (min-width: 901px) {@content;}
+    @media only screen and (min-width: 901px) and (max-width: 1199px) {@content;}
+  }
+  @else if $media == widedesktop {
+    @media only screen and (min-width: 1200px) {@content;}
   }
   @else if $media == short {
     @media only screen and (max-height: 770px) and (min-width: 606px) {@content;}
