--- a/resources/assets/sass/front/partials/_contentsections.scss
+++ b/resources/assets/sass/front/partials/_contentsections.scss
@@ -38,6 +38,7 @@
 
 .item-name {
   color: $primary_orange;
+  font-size: 18pt;
   text-transform: uppercase;
   text-align: center;
   font-family: $body_text;
