--- a/resources/assets/sass/partials/_slick.scss
+++ b/resources/assets/sass/partials/_slick.scss
@@ -94,3 +94,101 @@
         border: 1px solid transparent;
     }
 }
+//
+//.slick-prev,
+//.slick-next
+//{
+//  font-size: 0;
+//  line-height: 0;
+//
+//  position: absolute;
+//  top: 50%;
+//
+//  display: block;
+//
+//  width: 20px;
+//  height: 20px;
+//  margin-top: -10px;
+//  padding: 0;
+//
+//  cursor: pointer;
+//
+//  color: transparent;
+//  border: none;
+//  outline: none;
+//  background: transparent;
+//}
+//.slick-prev:hover,
+//.slick-prev:focus,
+//.slick-next:hover,
+//.slick-next:focus
+//{
+//  color: transparent;
+//  outline: none;
+//  background: transparent;
+//}
+//.slick-prev:hover:before,
+//.slick-prev:focus:before,
+//.slick-next:hover:before,
+//.slick-next:focus:before
+//{
+//  opacity: 1;
+//}
+//.slick-prev.slick-disabled:before,
+//.slick-next.slick-disabled:before
+//{
+//  opacity: .25;
+//}
+//
+//.slick-prev:before,
+//.slick-next:before
+//{
+//  font-family: 'slick';
+//  font-size: 40px;
+//  line-height: 1;
+//  z-index: 2000;
+//
+//  opacity: .75;
+//  color: white;
+//
+//  -webkit-font-smoothing: antialiased;
+//  -moz-osx-font-smoothing: grayscale;
+//}
+//
+//.slick-prev
+//{
+//  left: -25px;
+//}
+//[dir='rtl'] .slick-prev
+//{
+//  right: -25px;
+//  left: auto;
+//}
+//.slick-prev:before
+//{
+////  content: '←';
+//  content: '<';
+//}
+//[dir='rtl'] .slick-prev:before
+//{
+////  content: '→';
+//  content: '<';
+//}
+//
+//.slick-next
+//{
+//  right: -25px;
+//}
+//[dir='rtl'] .slick-next
+//{
+//  right: auto;
+//  left: -25px;
+//}
+//.slick-next:before
+//{
+//  content: '→';
+//}
+//[dir='rtl'] .slick-next:before
+//{
+//  content: '←';
+//}
