--- a/resources/assets/sass/front/variables/_colours.scss
+++ b/resources/assets/sass/front/variables/_colours.scss
@@ -6,4 +6,5 @@ $secondary_orange: #EF7A54;
 $white: #FFFFFF;
 $grey_text: #808080;
 $light_grey: #e5e5e5;
+$midlight_grey: #e4e4e4;
 $eggshell: #eeeeee;
