--- a/resources/assets/sass/front/pages/_about.scss
+++ b/resources/assets/sass/front/pages/_about.scss
@@ -2,6 +2,7 @@
   max-width: 800px;
   margin: 0 auto;
   padding: 10px;
+  padding-bottom: 40px;
   font-family: $body_text;
   color: $grey_text;
   font-size: 120%;
@@ -31,5 +32,16 @@
 
   .row {
     margin-bottom: 50px;
+  }
+}
+
+.about-page-section .corporate-structure-item {
+  max-width: 350px;
+  margin: 0 auto;
+  text-align: left;
+
+  p {
+    margin: 0;
+    padding: 5px 0;
   }
 }
