--- a/resources/assets/sass/front/partials/_homecontactform.scss
+++ b/resources/assets/sass/front/partials/_homecontactform.scss
@@ -3,6 +3,11 @@
   text-align: left;
   position: relative;
 
+  p.contactus-blurb {
+    max-width: 600px;
+    text-align: center;
+  }
+
   .row {
     margin-bottom: 25px;
   }
