--- a/resources/assets/sass/front/pages/_services.scss
+++ b/resources/assets/sass/front/pages/_services.scss
@@ -74,6 +74,7 @@
   color: $grey_text;
   position: relative;
   min-height: 200px;
+  font-weight: 300;
 
   ul li {
     list-style-image: url(../../images/isomark_bullet.png);
