--- a/resources/assets/sass/partials/_baserules.scss
+++ b/resources/assets/sass/partials/_baserules.scss
@@ -8,9 +8,10 @@ body {
 //  overflow: hidden;
 }
 
-a, a:visited, a:active, a:hover {
+a, a:visited, a:active, a:hover, a:focus {
   text-decoration: none;
   color: inherit;
+  outline: none;
 }
 
 .slide-nav-menu {
